trunk/Archive2/8c/b2d581d7a7c95d/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In member function ‘T X<T>::pop()’:
main.cpp:6:10: error: ‘move’ is not a member of ‘std’
   T tmp{ std::move(/*back()*/) }; // move/copy might throw, we're fine
          ^
